ticket/order inter-process communications